...
        hasAfg = true,
        hasDvm = true,
        supportsConfigurationQueries = true,
    ),

    /** MDO。RF 搭載。 */
    MDO4104C(
        idnModel = "MDO4104C",
        serialNumber = "C030001",
        firmware = "CF:91.1CT FV:v1.28",
        analogChannels = 4,
        digitalChannels = 16,
        hasRf = true,
...
